--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="col-4 ">
-                <img src="images/new Port.jpg" alt="" class="guru-prfl">
+                <img src="" alt="" class="guru-prfl">
             </div>
         </div>
 
@@ -75,7 +75,7 @@
         <div class="home">
             <div class="about-flex">
                 <div class="child-1">
-                    <img src="images/new Port.jpg" alt="" class="abt-img">
+                    <img src="" alt="" class="abt-img">
                 </div>
                 <div class="child-2">
                     <h2>"FRONT-END DEVELOPER"</h2>
@@ -92,7 +92,7 @@
                 CODE<i class="bi bi-chevron-right"></i></h2>
             <div class="row m-5">
                 <div class="col-3 box">
-                    <img src="images/download (1).jpeg" alt="" class="pro-img">
+                    <img src="" alt="" class="pro-img">
                     <div class="project-content">
                         <h4>Pizza Hub (React App)</h4>
                         <div class="pro-btn-flex">
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="col-3 box">
-                    <img src="images/youtube.jpg" alt="" class="pro-img">
+                    <img src="" alt="" class="pro-img">
                     <div class="project-content">
                         <h4>YouTube clone (React App)</h4>
                         <div class="pro-btn-flex">
@@ -137,7 +137,7 @@
 
                 </div>
                 <div class="col-3 box ">
-                    <img src="images/bookimgS.png" alt="" class="pro-img">
+                    <img src="" alt="" class="pro-img">
                     <div class="project-content">
                         <h4>BookMyShow clone</h4>
                         <div class="pro-btn-flex">
@@ -396,5 +396,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <script src="app.js"></script>
 </body>
 </html
